--- a/benefits/gating.mdx
+++ b/benefits/gating.mdx
@@ -8,42 +8,39 @@ Unlike tickets or membership passes, eligibility to claim a benefit **must** be 
 
 <AccordionGroup>
   <Accordion title="Gating by NFT">
-    <Steps>
-        <Step title="Select NFT Collection to Gate By">
-            In the target benefit campaign page, navigate to the benefit's edit panel and locate the 'Gated by NFT' section.
+    **Select NFT Collection to Gate By**
+    In the target benefit campaign page, navigate to the benefit's edit panel and locate the 'Gated by NFT' settings.
 
-            If you have hosted an event that was ticketed/created a membership program administered by Moongate, simply select "Your Collection" from the "Type" field.
-            <img src="/images/benefits/gating/your collection toggle.png"/>
-            <Accordion title="Your Collection">
-                <Steps>
-                    <Step title="Select the target event/membership program from the 'NFT Collection' field.">
-                    </Step>
-                    <Step title="Select the target ticket/membership tier from the 'Type' field.">
-                        Select "All Tier" if you do not want to gate by ticket/membership tier (i.e benefit will be available to all ticket holders from the specified event/all members of the specified membership program.)
-                    </Step>
-                </Steps>
-            </Accordion>
-            If you are gating by an external NFT collection, select "Other Collection."
-            <img src="/images/benefits/gating/other collection toggle.png"/>
-            <Accordion title="Other Collection">
-                <img src="/images/benefits/gating/Select Network.gif"/>
-                <Steps>
-                    <Step title="Select the network on which the target NFT collection is hosted.">
-                    </Step>
-                    <Step title="Enter the NFT collections' contract address.">
-                    </Step>
-                </Steps>
-            </Accordion>
-            <Tip>
-                A ticket can be gated by multiple NFT collections (i.e a purchaser must own an NFT from **at least one** of the specified collections). Simply click 'Add Collection' and repeat the above process to add an additional collection.
-                <img src="/images/benefits/gating/add collection.png"/>
-            </Tip>
-            <Tip>
-                Tickets can be gated so that a purchaser must own an NFT from **every** specified collection to unlock it.
-                <img src="/images/benefits/gating/require all collections.png"/>
-            </Tip>
-        </Step>
-    </Steps>
+    If you have hosted an event that was ticketed/created a membership program administered by Moongate, simply select "Your Collection" from the "Type" field.
+    <img src="/images/benefits/gating/your collection toggle.png"/>
+    <Accordion title="Your Collection">
+        <Steps>
+            <Step title="Select the target event/membership program from the 'NFT Collection' field.">
+            </Step>
+            <Step title="Select the target ticket/membership tier from the 'Type' field.">
+                Select "All Tier" if you do not want to gate by ticket/membership tier (i.e benefit will be available to all ticket holders from the specified event/all members of the specified membership program.)
+            </Step>
+        </Steps>
+    </Accordion>
+    If you are gating by an external NFT collection, select "Other Collection."
+    <img src="/images/benefits/gating/other collection toggle.png"/>
+    <Accordion title="Other Collection">
+        <img src="/images/benefits/gating/Select Network.gif"/>
+        <Steps>
+            <Step title="Select the network on which the target NFT collection is hosted.">
+            </Step>
+            <Step title="Enter the NFT collections' contract address.">
+            </Step>
+        </Steps>
+    </Accordion>
+    <Tip>
+        A ticket can be gated by multiple NFT collections (i.e a purchaser must own an NFT from **at least one** of the specified collections). Simply click 'Add Collection' and repeat the above process to add an additional collection.
+        <img src="/images/benefits/gating/add collection.png"/>
+    </Tip>
+    <Tip>
+        Tickets can be gated so that a purchaser must own an NFT from **every** specified collection to unlock it.
+        <img src="/images/benefits/gating/require all collections.png"/>
+    </Tip>          
   </Accordion>
   <Accordion title="Gating by Email/Wallet (Whitelisting)">
     <Steps>
