--- a/distribution/discountpromocode.mdx
+++ b/distribution/discountpromocode.mdx
@@ -2,9 +2,9 @@
 title: 'Discount and Promo Codes'
 ---
 
-<Info>
+<Tip>
     The process of creating and implementing discounts and promo codes is identical for both tickets and memberships.
-</Info>
+</Tip>
 
 
 <Steps>
