sales attendance data

--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -1,9 +1,7 @@
 ---
 title: 'Airdropping'
+description: 'Airdropping refers to the distribution of a free NFT to a targeted audience. Moongate supports airdropping via email addresses.'
 ---
-
-Airdropping refers to the distribution of a free NFT to a targeted audience. Moongate supports airdropping via email addresses.
-
 <Tip>
     The airdropping process is identical for both tickets and memberships.
 </Tip>
