--- a/customer-insights/sales-attendance-data.mdx
+++ b/customer-insights/sales-attendance-data.mdx
@@ -7,12 +7,12 @@ title: 'View Sales & Attendance Data'
 </Tip>
 
 <Steps>
-    <Step title="Sign into the Moongate Merchant Portal">
+    <Step title="Sign into the Moongate Merchant Portal.">
         [https://portal.moongate.id/](https://portal.moongate.id/)
     </Step>
-    <Step title="Navigate to the target event, membership program, or benefit page">
+    <Step title="Navigate to the target event, membership program, or benefit page.">
     </Step>
-    <Step title="Open the 'Sales' tab">
+    <Step title="View sales & attendance data in the 'Sales' tab.">
         From the Sales tab on the event/membership program/benefit campaign's dashboard, all sales data (all transactions, individual transactions, purchasers, 
         sales ($), number of registrations, etc) can be viewed. Click on an individual transaction to view it in detail.
         <img src="/images/customer-insights/sales-attendance-data/detailed transaction.gif"/>
