view cutomer info

--- a/customer-insights/view-customer-info.mdx
+++ b/customer-insights/view-customer-info.mdx
@@ -1,3 +1,35 @@
 ---
 title: 'View Customer Info'
+Description: 'View detailed information about event attendees/membership program members/benefit redeemers. You can also upload receipts to track customer spending.'
 ---
+
+**Viewing Detailed Customer Information**
+<Steps>
+    <Step title="Open the 'Contact' tab on the Moongate Merchant Portal.">
+        [https://portal.moongate.id/contacts](https://portal.moongate.id/contacts)    
+        <img src="/images/creating-campaign/membership/creating program/Create Button Location.png"/>
+    </Step>
+    <Step title="View target customer information">
+        Click on a target customer to open their information page.
+        <img src="/images/customer-insights/view-customer-info/customer detail.gif"/>
+        Swap between the "Event", "Membership", and "Benefits" tabs to view the customer's ticket purchases, membership ownership,
+        and claimed benefits. Click on an individual transaction to view it in detail.
+        <img src="/images/customer-insights/view-customer-info/swap tabs.gif"/>
+    </Step>
+</Steps>
+
+
+**Tracking Customer Spending**
+
+Customer receipts can be uploaded to track customer spending at your events and within your membership programs.
+
+<Steps>
+    <Step title="Open the 'Spending' tab on the target customer's information page">
+        <img src="/images/customer-insights/view-customer-info/spending tab.avif"/>
+    </Step>
+    <Step title="Upload receipt">
+        Click "Upload Receipt" and input the merchant name, amount spent, associated event/membership program, and an optional image
+        of the receipt. Click "Add" when complete.
+        <img src="/images/customer-insights/view-customer-info/upload receipt.gif"/>
+    </Step>
+</Steps>
