--- a/customer-insights/view-customer-info.mdx
+++ b/customer-insights/view-customer-info.mdx
@@ -3,11 +3,10 @@ title: 'View Customer Info'
 Description: 'View detailed information about event attendees/membership program members/benefit redeemers. You can also upload receipts to track customer spending.'
 ---
 
-**Viewing Detailed Customer Information**
+## Viewing Detailed Customer Information
 <Steps>
     <Step title="Open the 'Contact' tab on the Moongate Merchant Portal.">
-        [https://portal.moongate.id/contacts](https://portal.moongate.id/contacts)    
-        <img src="/images/creating-campaign/membership/creating program/Create Button Location.png"/>
+        [https://portal.moongate.id/contacts](https://portal.moongate.id/contacts)            
     </Step>
     <Step title="View target customer information">
         Click on a target customer to open their information page.
@@ -19,7 +18,7 @@ Description: 'View detailed information about event attendees/membership program
 </Steps>
 
 
-**Tracking Customer Spending**
+## Tracking Customer Spending
 
 Customer receipts can be uploaded to track customer spending at your events and within your membership programs.
 
