--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -62,7 +62,7 @@ Once you have created a corresponding event, you are now ready to create and iss
     The advanced options menu allows you to specify the number of available tickets of this type, the maximum number of tickets
     of this type purchasable in a transaction, gating settings via NFT/email/wallet, whether this ticket type should be hidden
     on the event page, and whether users require a special code to purchase this ticket type.
-    <img src= "/images/creating-campaign/ticketing/creating tickets/advanced options.png"/>
+    <img src= "/images/creating-campaign/ticketing/creating tickets/Advanced Options.png"/>
     <Tabs>
       <Tab title="Hide Tickets">
         <img src="/images/creating-campaign/ticketing/creating tickets/hide.png"/>
