--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -98,12 +98,14 @@ Once you have created a corresponding event, you are now ready to create and iss
     </Accordion>
   </Step>
   <Step title="Add Questions (Optional)">
-    <img src="/images/creating-campaign/ticketing/creating tickets/Add Qs.gif"/>
-    If applicable, add questions to collect information from users who are purchasing tickets. These questions 
-    will be shown to users during checkout.
-    <img src="/images/creating-campaign/ticketing/creating tickets/Qs.png"/>
-    Responses can be viewed from the event's Sales tab, located in the event dashboard.
-    <img src="/images/creating-campaign/ticketing/creating tickets/Reponses.gif"/>
+    <Accordion title="Adding Questions">
+      <img src="/images/creating-campaign/ticketing/creating tickets/Add Qs.gif"/>
+      If applicable, add questions to collect information from users who are purchasing tickets. These questions 
+      will be shown to users during checkout.
+      <img src="/images/creating-campaign/ticketing/creating tickets/Qs.png"/>
+      Responses can be viewed from the event's Sales tab, located in the event dashboard.
+      <img src="/images/creating-campaign/ticketing/creating tickets/Reponses.gif"/>
+    </Accordion>
   </Step>
   <Step title="Specify Contract Settings and Payment Options">
     Choose a collection name and symbol for **all ticket types associated with your event.** The collection name will be used as the collection title when tickets are listed on marketplaces.
