--- a/customer-insights/view-customer-info.mdx
+++ b/customer-insights/view-customer-info.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'View Customer Info'
-Description: 'View detailed information about event attendees/membership program members/benefit redeemers. You can also upload receipts to track customer spending.'
+description: 'View detailed information about event attendees/membership program members/benefit redeemers. You can also upload receipts to track customer spending.'
 ---
 
 ## Viewing Detailed Customer Information
