--- a/customer-insights/utm-tracking.mdx
+++ b/customer-insights/utm-tracking.mdx
@@ -1,3 +1,16 @@
 ---
 title: 'UTM Tracking'
+description: 'Moongate supports UTM tracking, allowing you to gain a detailed understanding of where your campaign participants are 
+joining from.'
 ---
+
+UTM tracking is enabled by appending `?utm_(anything-you-want-to-track)=(anything)` to the back of your campaign's URL. 
+Multiple parameters can be tracked at the same time; simply add `&utm_(anything-you-want-to-track)=(anything)` after the first 
+UTM parameter. Typical values for the '(anything-you-want-to-track)' fields include source, medium, campaign, term, and content. 
+
+For instance, you could distribute a link to your event via Instagram with the UTM parameter `?utm_source=instagram`(where 
+`(anything-you-want-to-track) = source` and `(anything) = instagram`) in the URL, enabling you to view which ticket transactions
+originated from Instagram. An example URL would be formatted as follows: https://app.moongate.id/events/moongatedemo`?utm_source=instagram`
+
+Clicking on an individual transaction from the portal displays the UTM data associated with that transaction, if any. UTM data is 
+also visible within the corresponding CSV export.
