--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -4,7 +4,7 @@ title: 'Collecting User Payments'
 
 <Warning>
     If you are collecting payment for tickets or memberships, you must connect a bank account or crypto wallet to receive your payout. 
-    Additionally, please contact [Moongate support](mailto:support@moongate.id) if your event or membership program will be collecting payment.
+    Additionally, please contact [Moongate support](mailto:support@moongate.id) if you will be collecting payment for your event or membership program.
 </Warning>
 
 <Steps>
