--- a/admin-settings/team-management.mdx
+++ b/admin-settings/team-management.mdx
@@ -1,3 +1,16 @@
 ---
 title: 'Team Management'
+description: 'Grant team members access to your event/membership program/benefit campaign management tools.'
 ---
+
+<Steps>
+    <Step title="Navigate to the Team Management panel">
+        Click "Setting" on the sidebar, and then "Team Management."
+        <img src="/images/admin-settings/team-management/team management panel.gif"/>
+    </Step>
+    <Step title="Add team members">
+        Click "Add New," input the email address of the target team member, and then "Add."
+        <img src="/images/admin-settings/team-management/add member.gif"/>
+        Please note that at this time, Admin is the only role available.
+    </Step>
+</Steps>
