--- a/admin-settings/team-management.mdx
+++ b/admin-settings/team-management.mdx
@@ -5,12 +5,12 @@ description: 'Grant team members access to your event/membership program/benefit
 
 <Steps>
     <Step title="Navigate to the Team Management panel">
-        Click "Setting" on the sidebar, and then "Team Management."
+        Click 'Setting' on the sidebar, and then 'Team Management.'
         <img src="/images/admin-settings/team-management/team management panel.gif"/>
     </Step>
     <Step title="Add team members">
-        Click "Add New," input the email address of the target team member, and then "Add."
+        Click 'Add New', input the email address of the target team member, and then 'Add.'
         <img src="/images/admin-settings/team-management/add member.gif"/>
-        Please note that at this time, Admin is the only role available.
+        Please note that Admin is the only role available at this time. 
     </Step>
 </Steps>
