--- a/custom-features/implement-custom-features.mdx
+++ b/custom-features/implement-custom-features.mdx
@@ -2,16 +2,21 @@
 title: 'Implement Custom Features'
 ---
 
-Moongate can implement a number of custom features for your event or campaign. For more information, please book a chat with us via email, Telegram, X DMs, or Discord.
+Moongate can implement a number of custom features for your event or campaign. For more information, please book a 
+chat with us via [email](mailto:support@moongate.id), [Telegram](https://t.me/pweeh), 
+[X/Twitter DMs](https://twitter.com/messages/compose?recipient_id=1498601983195844608), or [Discord](https://discord.gg/zg8MwKKtuv).
 
-POAPs: short for "proof of attendance protocol," POAPs are post-event souvenir NFTs for event attendees. The NFT can be issued while exiting the event or even after via email.
-
-NFT Drops at Event Entrance: attendees can be issued an NFT upon checking into the event, which can serve as an automatic entry ticket into a raffle, etc.
-
-Exclusive Ticket Tiers: gate special ticket tiers behind an access code that buyers must enter during checkout.
-
-Gamification: game-like elements can be integrated into your event or campaign to increase attendee engagement. For instance, users could earn points for visiting booths at a conference, completing feedback surveys, making purchases, or sharing posts from your brand's social media accounts. Points can be exchanged for benefits, potentially offering an additional revenue stream to upsell sponsors. The contact information of participants can also be automatically collected.
-
-Custom Website/White Labelling: make the ticketing/membership purchase experience more seamless with your brand by using a custom checkout page instead of our default page.
-
-Conference Badge & Membership Card Integration: combine our NFT ticketing and membership solutions with traditional badges/cards, further merging the benefits of Web3 with traditional event/membership admissions models. A video demonstration of Moongate's phygital integration capabilities can be viewed here.
+- **POAPs**: short for "proof of attendance protocol," POAPs are post-event souvenir NFTs for event attendees. The NFT 
+can be issued while exiting the event or even after via email.
+- **NFT Drops at Event Entrance**: attendees can be issued an NFT upon checking into the event, which can serve as an 
+automatic entry ticket into a raffle, etc.
+- **Exclusive Ticket Tiers**: gate special ticket tiers behind an access code that buyers must enter during checkout.
+- **Gamification**: game-like elements can be integrated into your event or campaign to increase attendee engagement. 
+For instance, users could earn points for visiting booths at a conference, completing feedback surveys, making purchases, 
+or sharing posts from your brand's social media accounts. Points can be exchanged for benefits, potentially offering an 
+additional revenue stream to upsell sponsors. The contact information of participants can also be automatically collected.
+- **Custom Website/White Labelling**: make the ticketing/membership purchase experience more seamless with your brand by 
+using a custom checkout page instead of our default page.
+- **Conference Badge & Membership Card Integration**: combine our NFT ticketing and membership solutions with traditional 
+badges/cards, further merging the benefits of Web3 with traditional event/membership admissions models. A video demonstration 
+of Moongate's phygital integration capabilities can be viewed here.
