--- a/support/merchant-faq.mdx
+++ b/support/merchant-faq.mdx
@@ -7,15 +7,15 @@ title: 'Merchant FAQs'
         Absolutely. Once you duplicate the template, only you and the workspace collaborators have access to your copy of the FAQ.
     </Accordion>
     <Accordion title="Where can I check my login details for the Moongate Verify App?">
-        Please check the [Check-in Guide](/check-in/check-in-guide) for details.
+        Please refer to the [Check-in Guide](/check-in/check-in-guide) for details.
     </Accordion>
     <Accordion title="How should I interpret the verification results?">
-        Please check the [Check-in Guide](/check-in/check-in-guide) for details.
+        Please refer to the [Check-in Guide](/check-in/check-in-guide) for details.
     </Accordion>
     <Accordion title="How do I check NFT ticket/membership pass ownership in real life using the Moongate Verify App?">
-        Please check the [Check-in Guide](/check-in/check-in-guide) for details.
+        Please refer to the [Check-in Guide](/check-in/check-in-guide) for details.
     </Accordion>    
     <Accordion title="What is Moongate's fund settlement and refund policy?">
-        Please check Moongate's [Fund Settlement and Refund Policy guide](/settlement-refunds-policy/settlement-refunds-policy) for more details.
+        Please refer to Moongate's [Fund Settlement and Refund Policy guide](/settlement-refunds-policy/settlement-refunds-policy) for details.
     </Accordion>
 </AccordionGroup>
