--- a/settlement-refunds-policy/settlement-refunds-policy.mdx
+++ b/settlement-refunds-policy/settlement-refunds-policy.mdx
@@ -3,7 +3,10 @@ title: 'Fund Settlement and Refund Policy'
 ---
 
 ## I. Fund Settlement Policy
-A. Standard Settlement Procedure
-    1. Settlement Period:
-    2. Settlement Currency:
-    3. Currency Conversion:
+### A. Standard Settlement Procedure
+    1. **Settlement Period:**
+    2. **Settlement Currency:**
+    3. **Currency Conversion:**
+### B. Special Settlement Requests
+    1. **Frequency:**
+    2. **Request Procedure:**
