--- a/settlement-refunds-policy/settlement-refunds-policy.mdx
+++ b/settlement-refunds-policy/settlement-refunds-policy.mdx
@@ -10,3 +10,17 @@ title: 'Fund Settlement and Refund Policy'
 ### B. Special Settlement Requests
     1. **Frequency:**
     2. **Request Procedure:**
+
+## II. Refund Policy
+### A. General Refund Guidelines
+    1. **No Standard Refunds:**
+    2. **Manual Refund Process:**
+### B. Refund Request Procedure
+    1. **Initiating a Refund:**
+    2. **Verification:**
+### C. Refund Amounts
+    1. **Standard Refund:**
+    2. **Full Refund:**
+
+## III. Contact
+For any inquiries or to initiate a special settlement or refund request, please contact our support team via [email](mailto:support@moongate.id).
