--- a/settlement-refunds-policy/settlement-refunds-policy.mdx
+++ b/settlement-refunds-policy/settlement-refunds-policy.mdx
@@ -4,23 +4,23 @@ title: 'Fund Settlement and Refund Policy'
 
 ## I. Fund Settlement Policy
 ### A. Standard Settlement Procedure
-    1. **Settlement Period:**
-    2. **Settlement Currency:**
-    3. **Currency Conversion:**
+    1. **Settlement Period:** Funds will be settled to event organizers within 7 days following the conclusion of the event.
+    2. **Settlement Currency:** Funds can be settled in either cryptocurrency or fiat currency, as per the preference of the event organizer.
+    3. **Currency Conversion:** In instances where funds are collected in both cryptocurrency and fiat, we offer the flexibility to convert and settle all funds in either currency type, handling all necessary on/off-ramp procedures internally.
 ### B. Special Settlement Requests
-    1. **Frequency:**
-    2. **Request Procedure:**
+    1. **Frequency:** Upon special request, funds can be settled on alternative schedules, such as weekly or monthly.
+    2. **Request Procedure:** To initiate a special settlement request, event organizers must contact our finance team, providing relevant details and justifications for the altered settlement period.
 
 ## II. Refund Policy
 ### A. General Refund Guidelines
-    1. **No Standard Refunds:**
-    2. **Manual Refund Process:**
+    1. **No Standard Refunds:** Given that tickets are issued in the form of Non-Fungible Tokens (NFTs), we generally advise event organizers to specify that events do not support refunds.
+    2. **Manual Refund Process:** In exceptional circumstances where a refund is deemed necessary, we can facilitate this on a manual basis.
 ### B. Refund Request Procedure
-    1. **Initiating a Refund:**
-    2. **Verification:**
+    1. **Initiating a Refund:** Either event organizers or ticket purchasers can initiate a refund request by submitting relevant details to our support team.
+    2. **Verification:** Our team will verify the details and circumstances of the refund request before processing.
 ### C. Refund Amounts
-    1. **Standard Refund:**
-    2. **Full Refund:**
+    1. **Standard Refund:** The standard refund amount will be the ticket price minus the payment processing fee, as payment processing fees from platforms like Stripe or CoinGate are non-refundable.
+    2. **Full Refund:** We can facilitate a full refund, inclusive of the payment processing fee, under special circumstances. However, the cost of the payment processing fee will then be transferred to the event organizer.
 
 ## III. Contact
-For any inquiries or to initiate a special settlement or refund request, please contact our support team via [email](mailto:support@moongate.id).
+For any inquiries or to initiate a special settlement or refund request, please [contact our support team](mailto:support@moongate.id).
