--- a/get-started/quickstart.mdx
+++ b/get-started/quickstart.mdx
@@ -5,6 +5,6 @@ We've linked some key sections of our merchant user guide below for your conveni
 
 - [Creating an Event](/creating-campaign/ticketing/createevent)
 - [Creating a Membership Campaign](/creating-campaign/membership/creatememprogram)
-- [Creating a Benefit Campaign]()
-- [Ticket Validation/User Check-in Guide]()
-- [Implementing Discounts and Promo Codes]()
+- [Creating a Benefit Campaign](/benefits/createbenefitprgrm)
+- [Ticket Validation/User Check-in Guide](/check-in/check-in-guide)
+- [Implementing Discounts and Promo Codes](/distribution/discountpromocode)
