--- a/creating-campaign/ticketing/gating.mdx
+++ b/creating-campaign/ticketing/gating.mdx
@@ -14,7 +14,7 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
             Navigate to the "Advance" section for the ticket type to be gated and enable "Gated by NFT."
             <img src="/images/creating-campaign/ticketing/gating/NFT Gate Toggle.png"/>
         </Step>
-        <Step title="Select NFT Collection to Gate By">
+        <Step title="Select NFT Collection to gate by">
             If you have hosted an event that was ticketed by or created a membership program on Moongate, we have made it easy for you to NFT-gate by your events and membership tiers. Simply select "Your Collection" from the "Type" field.
             <img src="/images/creating-campaign/ticketing/gating/Your Collection Toggle.png"/>
             <Accordion title="Your Collection">
@@ -51,43 +51,48 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
   </Accordion>
   <Accordion title="Gating by Email/Wallet (Whitelisting)">
     <Steps>
-        <Step title="Enable Email/Wallet-gating">
+        <Step title="Enable email/wallet-gating">
             Navigate to the "Advance" section for the ticket type to be gated and enable "Gated by Email/Wallet."
             <img src="/images/creating-campaign/ticketing/gating/Email or Wallet Toggle.png"/>
         </Step>
-        <Step title="Choose a Whitelisting Method">
+        <Step title="Choose a whitelisting method">
+            <img src="/images/creating-campaign/ticketing/gating/select gate method.png"/>
             Select CSV if there are a large number of people that you will be gating this ticket type to, and manual for a smaller quantity.
             <Tip>
                 You can always add additional addresses for gating later using either method.
-            </Tip>
-            <img src="/images/creating-campaign/ticketing/gating/CSV Gate.png"/>
+            </Tip>            
             <Accordion title="CSV (bulk import)">
                 <Steps>
+                    <Step title="Select the "Upload CSV" method>
+                        <img src="/images/creating-campaign/ticketing/gating/CSV Gate.png"/>
+                    </Step>
                     <Step title="Download the CSV template">
                         <img src="/images/creating-campaign/ticketing/gating/Download CSV Template.png"/>
                     </Step>
-                    <Step title="Add Addresses to the CSV Template">
+                    <Step title="Add addresses to the CSV template">
                         Open the template in a spreadsheet editor. Following the template format, input the target email and wallet addresses. You can mix email and wallet addresses concurrently.
                     </Step>
                     <Step title="Upload the CSV">
                         Upload the edited CSV file and save.
                         <img src="/images/creating-campaign/ticketing/gating/Whitelist Upload.png"/>
                     </Step>
-                    <Step title="Confirm Successful Import">
+                    <Step title="Confirm successful import">
                         Return to the Tickets page, locate the gated ticket type, and click the number in the "Gated by" column to confirm the addresses.
                         <img src="/images/creating-campaign/ticketing/gating/Whitelist Confirmation 1.png"/>
                         <img src="/images/creating-campaign/ticketing/gating/Whitelist Confirmation 2.png"/>
                     </Step>
                 </Steps>
-            </Accordion>
-            <img src="/images/creating-campaign/ticketing/gating/Manual Gate.png"/>
+            </Accordion>            
             <Accordion title="Manual">
                 <Steps>
+                    <Step title="Select the "Manual" method>
+                        <img src="/images/creating-campaign/ticketing/gating/Manual Gate.png"/>
+                    </Step>
                     <Step title="Click 'Add Whitelist' and input an email/wallet address">
                         Repeat as appropriate for additional addresses and save when complete.
                         <img src="/images/creating-campaign/ticketing/gating/Manual Flow.gif"/>
                     </Step>
-                    <Step title="Confirm Successful Import">
+                    <Step title="Confirm successful import">
                         Return to the Tickets page, locate the gated ticket type, and click the number in the "Gated by" column to confirm the addresses.
                         <img src="/images/creating-campaign/ticketing/gating/Whitelist Confirmation 1.png"/>
                         <img src="/images/creating-campaign/ticketing/gating/Whitelist Confirmation 2.png"/>
