--- a/creating-campaign/ticketing/gating.mdx
+++ b/creating-campaign/ticketing/gating.mdx
@@ -59,7 +59,7 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
             <img src="/images/creating-campaign/ticketing/gating/select gate method.png"/>
             Select CSV if there are a large number of people that you will be gating this ticket type to, and manual for a smaller quantity.
             <Tip>
-                You can always add additional addresses for gating later using either method.
+                You can always gate additional addresses later using either method.
             </Tip>            
             <Accordion title="CSV (bulk import)">
                 <Steps>
