--- a/creating-campaign/ticketing/gating.mdx
+++ b/creating-campaign/ticketing/gating.mdx
@@ -85,7 +85,7 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
             </Accordion>            
             <Accordion title="Manual">
                 <Steps>
-                    <Step title="Select the "Manual" method>
+                    <Step title="Select the "Manual" method">
                         <img src="/images/creating-campaign/ticketing/gating/Manual Gate.png"/>
                     </Step>
                     <Step title="Click 'Add Whitelist' and input an email/wallet address">
