Final Fix Actual

--- a/creating-campaign/ticketing/gating.mdx
+++ b/creating-campaign/ticketing/gating.mdx
@@ -63,7 +63,7 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
             </Tip>            
             <Accordion title="CSV (bulk import)">
                 <Steps>
-                    <Step title="Select the 'Upload CSV' method>
+                    <Step title="Select the 'Upload CSV' method">
                         <img src="/images/creating-campaign/ticketing/gating/CSV Gate.png"/>
                     </Step>
                     <Step title="Download the CSV template">
